# c-xiaozhi-client

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml  release.yml
qml/components/: AboutDialog.qml  AddDeviceDialog.qml  ChatArea.qml  ChatBubble.qml  DeviceItem.qml  EditDeviceDialog.qml  MessageInput.qml  SettingsDialog.qml  SideBar.qml  TitleBar.qml  UpdateDialog.qml
qml/theme/: Theme.qml
